argocd_addons/demo_externalsecret_deployment/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-finance-api-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: demo.icarusean.com
    http:
      paths:
      - backend:
          serviceName: demo-finance-api
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo-finance-api-ingress-preview
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pre-demo.icarusean.com
    http:
      paths:
      - backend:
          serviceName: demo-finance-api-preview
          servicePort: 80
